# liquidity

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml  post-pr.yml  pr.yml  release.yml
liquidity/compute/: cache.py  chart.py  ticker.py
liquidity/compute/utils/: dividends.py  yields.py
liquidity/data/: config.py  format.py
liquidity/data/metadata/: assets.py  entities.py  fields.py
liquidity/data/providers/: alpaca.py  alpaca_markets.py  alpha_vantage.py  base.py  fred.py  local.py
liquidity/models/: liquidity.py  price_ratio.py  proxies.py  yield_spread.py
liquidity/visuals/: chart.py  matrix.py
tests/: utils.py
tests/e2e/: test_alpha_vantage.py
tests/integration/: conftest.py  test_alpaca_markets.py  test_alpha_vantage.py
tests/integration/fixtures/: treasury_yield_monthly_10year.json
tests/unit/: conftest.py
tests/unit/compute/: test_cache.py  test_ticker.py
tests/unit/compute/utils/: test_dividends.py  test_yields.py
tests/unit/data/: test_format.py
tests/unit/data/providers/: test_alpaca_markets.py  test_alpha_vantage.py
tests/unit/fixtures/: chart.json
tests/unit/models/: test_liquidity.py  test_price_ratio.py
tests/unit/visuals/: test_chart.py
