[tool.poetry]
name = "liquidity"
version = "0.1.0"
description = "Market liquidity proxies"
authors = ["Marcin Dąmbski"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic-settings = "^2.7.1"
alpha-vantage = "^3.0.0"
responses = "^0.25.3"
numpy = "^1.26"
pandas = "^1.5.3"
matplotlib = "3.8"
alpaca-py = "^0.35.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
pytest = "^8.3.4"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
]